parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> prog
Rule 2     prog -> listeInstructions
Rule 3     listeInstructions -> instruction
Rule 4     listeInstructions -> listeInstructions instruction
Rule 5     instruction -> fonction_declaration
Rule 6     instruction -> fonction_declaration_without_parm
Rule 7     instruction -> appel_fonction_instr_without_parm
Rule 8     instruction -> appel_fonction_instr
Rule 9     instruction -> retourner
Rule 10    instruction -> boucle
Rule 11    instruction -> condition
Rule 12    instruction -> affectation
Rule 13    instruction -> declaration
Rule 14    instruction -> ecrire
Rule 15    ecrire -> ECRIRE ( expr ) ;
Rule 16    declaration -> type IDENTIFIANT ;
Rule 17    declaration -> type IDENTIFIANT = expr ;
Rule 18    affectation -> IDENTIFIANT = expr ;
Rule 19    condition -> SI ( expr ) { listeInstructions } suite_sinosi
Rule 20    suite_sinosi -> <empty>
Rule 21    suite_sinosi -> SINON SI ( expr ) { listeInstructions } suite_sinosi
Rule 22    suite_sinosi -> SINON { listeInstructions }
Rule 23    boucle -> TANTQUE ( expr ) { listeInstructions }
Rule 24    retourner -> RETOURNER expr ;
Rule 25    retourner -> retourner
Rule 26    appel_fonction_instr -> IDENTIFIANT ( arg_list ) ;
Rule 27    appel_fonction_expr -> IDENTIFIANT ( arg_list )
Rule 28    appel_fonction_instr_without_parm -> IDENTIFIANT ( ) ;
Rule 29    appel_fonction_expr_without_parm -> IDENTIFIANT ( )
Rule 30    fonction_declaration -> type IDENTIFIANT ( param_list ) { listeInstructions }
Rule 31    fonction_declaration_without_parm -> type IDENTIFIANT ( ) { listeInstructions }
Rule 32    param_list -> param_list , param
Rule 33    param_list -> param
Rule 34    param -> type IDENTIFIANT
Rule 35    expr -> expr ET expr  [precedence=left, level=5]
Rule 36    expr -> expr DIV term  [precedence=left, level=3]
Rule 37    expr -> expr COMPARATEUR expr  [precedence=nonassoc, level=7]
Rule 38    expr -> expr MODULO term  [precedence=left, level=3]
Rule 39    expr -> term
Rule 40    factor -> LIRE ( )
Rule 41    factor -> MINUS factor  [precedence=nonassoc, level=2]
Rule 42    factor -> NON expr  [precedence=nonassoc, level=1]
Rule 43    factor -> factor OU expr  [precedence=left, level=6]
Rule 44    factor -> IDENTIFIANT
Rule 45    factor -> ( expr )
Rule 46    factor -> BOOLEEN_LITERAL
Rule 47    factor -> ENTIER
Rule 48    factor -> appel_fonction_expr_without_parm
Rule 49    factor -> appel_fonction_expr
Rule 50    term -> term MINUS factor  [precedence=left, level=4]
Rule 51    term -> term PLUS factor  [precedence=left, level=4]
Rule 52    term -> factor
Rule 53    term -> term MULT factor  [precedence=left, level=3]
Rule 54    type -> ENT
Rule 55    type -> BOOLEEN
Rule 56    arg_list -> arg_list , expr
Rule 57    arg_list -> expr

Unused terminals:

    UMINUS
    ALORS

Terminals, with rules where they appear:

(                    : 15 19 21 23 26 27 28 29 30 31 40 45
)                    : 15 19 21 23 26 27 28 29 30 31 40 45
,                    : 32 56
;                    : 15 16 17 18 24 26 28
=                    : 17 18
ALORS                : 
BOOLEEN              : 55
BOOLEEN_LITERAL      : 46
COMPARATEUR          : 37
DIV                  : 36
ECRIRE               : 15
ENT                  : 54
ENTIER               : 47
ET                   : 35
IDENTIFIANT          : 16 17 18 26 27 28 29 30 31 34 44
LIRE                 : 40
MINUS                : 41 50
MODULO               : 38
MULT                 : 53
NON                  : 42
OU                   : 43
PLUS                 : 51
RETOURNER            : 24
SI                   : 19 21
SINON                : 21 22
TANTQUE              : 23
UMINUS               : 
error                : 
{                    : 19 21 22 23 30 31
}                    : 19 21 22 23 30 31

Nonterminals, with rules where they appear:

affectation          : 12
appel_fonction_expr  : 49
appel_fonction_expr_without_parm : 48
appel_fonction_instr : 8
appel_fonction_instr_without_parm : 7
arg_list             : 26 27 56
boucle               : 10
condition            : 11
declaration          : 13
ecrire               : 14
expr                 : 15 17 18 19 21 23 24 35 35 36 37 37 38 42 43 45 56 57
factor               : 41 43 50 51 52 53
fonction_declaration : 5
fonction_declaration_without_parm : 6
instruction          : 3 4
listeInstructions    : 2 4 19 21 22 23 30 31
param                : 32 33
param_list           : 30 32
prog                 : 1
retourner            : 9 25
statement            : 0
suite_sinosi         : 19 21
term                 : 36 38 39 50 51 53
type                 : 16 17 30 31 34


state 0

    (0) S' -> . statement
    (1) statement -> . prog
    (2) prog -> . listeInstructions
    (3) listeInstructions -> . instruction
    (4) listeInstructions -> . listeInstructions instruction
    (5) instruction -> . fonction_declaration
    (6) instruction -> . fonction_declaration_without_parm
    (7) instruction -> . appel_fonction_instr_without_parm
    (8) instruction -> . appel_fonction_instr
    (9) instruction -> . retourner
    (10) instruction -> . boucle
    (11) instruction -> . condition
    (12) instruction -> . affectation
    (13) instruction -> . declaration
    (14) instruction -> . ecrire
    (30) fonction_declaration -> . type IDENTIFIANT ( param_list ) { listeInstructions }
    (31) fonction_declaration_without_parm -> . type IDENTIFIANT ( ) { listeInstructions }
    (28) appel_fonction_instr_without_parm -> . IDENTIFIANT ( ) ;
    (26) appel_fonction_instr -> . IDENTIFIANT ( arg_list ) ;
    (24) retourner -> . RETOURNER expr ;
    (25) retourner -> . retourner
    (23) boucle -> . TANTQUE ( expr ) { listeInstructions }
    (19) condition -> . SI ( expr ) { listeInstructions } suite_sinosi
    (18) affectation -> . IDENTIFIANT = expr ;
    (16) declaration -> . type IDENTIFIANT ;
    (17) declaration -> . type IDENTIFIANT = expr ;
    (15) ecrire -> . ECRIRE ( expr ) ;
    (54) type -> . ENT
    (55) type -> . BOOLEEN
    IDENTIFIANT     shift and go to state 16
    RETOURNER       shift and go to state 17
    TANTQUE         shift and go to state 18
    SI              shift and go to state 19
    ECRIRE          shift and go to state 20
    ENT             shift and go to state 21
    BOOLEEN         shift and go to state 22

    statement                      shift and go to state 1
    prog                           shift and go to state 2
    listeInstructions              shift and go to state 3
    instruction                    shift and go to state 4
    fonction_declaration           shift and go to state 5
    fonction_declaration_without_parm shift and go to state 6
    appel_fonction_instr_without_parm shift and go to state 7
    appel_fonction_instr           shift and go to state 8
    retourner                      shift and go to state 9
    boucle                         shift and go to state 10
    condition                      shift and go to state 11
    affectation                    shift and go to state 12
    declaration                    shift and go to state 13
    ecrire                         shift and go to state 14
    type                           shift and go to state 15

state 1

    (0) S' -> statement .


state 2

    (1) statement -> prog .
    $end            reduce using rule 1 (statement -> prog .)


state 3

    (2) prog -> listeInstructions .
    (4) listeInstructions -> listeInstructions . instruction
    (5) instruction -> . fonction_declaration
    (6) instruction -> . fonction_declaration_without_parm
    (7) instruction -> . appel_fonction_instr_without_parm
    (8) instruction -> . appel_fonction_instr
    (9) instruction -> . retourner
    (10) instruction -> . boucle
    (11) instruction -> . condition
    (12) instruction -> . affectation
    (13) instruction -> . declaration
    (14) instruction -> . ecrire
    (30) fonction_declaration -> . type IDENTIFIANT ( param_list ) { listeInstructions }
    (31) fonction_declaration_without_parm -> . type IDENTIFIANT ( ) { listeInstructions }
    (28) appel_fonction_instr_without_parm -> . IDENTIFIANT ( ) ;
    (26) appel_fonction_instr -> . IDENTIFIANT ( arg_list ) ;
    (24) retourner -> . RETOURNER expr ;
    (25) retourner -> . retourner
    (23) boucle -> . TANTQUE ( expr ) { listeInstructions }
    (19) condition -> . SI ( expr ) { listeInstructions } suite_sinosi
    (18) affectation -> . IDENTIFIANT = expr ;
    (16) declaration -> . type IDENTIFIANT ;
    (17) declaration -> . type IDENTIFIANT = expr ;
    (15) ecrire -> . ECRIRE ( expr ) ;
    (54) type -> . ENT
    (55) type -> . BOOLEEN
    $end            reduce using rule 2 (prog -> listeInstructions .)
    IDENTIFIANT     shift and go to state 16
    RETOURNER       shift and go to state 17
    TANTQUE         shift and go to state 18
    SI              shift and go to state 19
    ECRIRE          shift and go to state 20
    ENT             shift and go to state 21
    BOOLEEN         shift and go to state 22

    instruction                    shift and go to state 23
    fonction_declaration           shift and go to state 5
    fonction_declaration_without_parm shift and go to state 6
    appel_fonction_instr_without_parm shift and go to state 7
    appel_fonction_instr           shift and go to state 8
    retourner                      shift and go to state 9
    boucle                         shift and go to state 10
    condition                      shift and go to state 11
    affectation                    shift and go to state 12
    declaration                    shift and go to state 13
    ecrire                         shift and go to state 14
    type                           shift and go to state 15

state 4

    (3) listeInstructions -> instruction .
    IDENTIFIANT     reduce using rule 3 (listeInstructions -> instruction .)
    RETOURNER       reduce using rule 3 (listeInstructions -> instruction .)
    TANTQUE         reduce using rule 3 (listeInstructions -> instruction .)
    SI              reduce using rule 3 (listeInstructions -> instruction .)
    ECRIRE          reduce using rule 3 (listeInstructions -> instruction .)
    ENT             reduce using rule 3 (listeInstructions -> instruction .)
    BOOLEEN         reduce using rule 3 (listeInstructions -> instruction .)
    $end            reduce using rule 3 (listeInstructions -> instruction .)
    }               reduce using rule 3 (listeInstructions -> instruction .)


state 5

    (5) instruction -> fonction_declaration .
    IDENTIFIANT     reduce using rule 5 (instruction -> fonction_declaration .)
    RETOURNER       reduce using rule 5 (instruction -> fonction_declaration .)
    TANTQUE         reduce using rule 5 (instruction -> fonction_declaration .)
    SI              reduce using rule 5 (instruction -> fonction_declaration .)
    ECRIRE          reduce using rule 5 (instruction -> fonction_declaration .)
    ENT             reduce using rule 5 (instruction -> fonction_declaration .)
    BOOLEEN         reduce using rule 5 (instruction -> fonction_declaration .)
    $end            reduce using rule 5 (instruction -> fonction_declaration .)
    }               reduce using rule 5 (instruction -> fonction_declaration .)


state 6

    (6) instruction -> fonction_declaration_without_parm .
    IDENTIFIANT     reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    RETOURNER       reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    TANTQUE         reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    SI              reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    ECRIRE          reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    ENT             reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    BOOLEEN         reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    $end            reduce using rule 6 (instruction -> fonction_declaration_without_parm .)
    }               reduce using rule 6 (instruction -> fonction_declaration_without_parm .)


state 7

    (7) instruction -> appel_fonction_instr_without_parm .
    IDENTIFIANT     reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    RETOURNER       reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    TANTQUE         reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    SI              reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    ECRIRE          reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    ENT             reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    BOOLEEN         reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    $end            reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)
    }               reduce using rule 7 (instruction -> appel_fonction_instr_without_parm .)


state 8

    (8) instruction -> appel_fonction_instr .
    IDENTIFIANT     reduce using rule 8 (instruction -> appel_fonction_instr .)
    RETOURNER       reduce using rule 8 (instruction -> appel_fonction_instr .)
    TANTQUE         reduce using rule 8 (instruction -> appel_fonction_instr .)
    SI              reduce using rule 8 (instruction -> appel_fonction_instr .)
    ECRIRE          reduce using rule 8 (instruction -> appel_fonction_instr .)
    ENT             reduce using rule 8 (instruction -> appel_fonction_instr .)
    BOOLEEN         reduce using rule 8 (instruction -> appel_fonction_instr .)
    $end            reduce using rule 8 (instruction -> appel_fonction_instr .)
    }               reduce using rule 8 (instruction -> appel_fonction_instr .)


state 9

    (9) instruction -> retourner .
    (25) retourner -> retourner .
  ! reduce/reduce conflict for IDENTIFIANT resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for RETOURNER resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for TANTQUE resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for SI resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for ECRIRE resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for ENT resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for BOOLEEN resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for $end resolved using rule 9 (instruction -> retourner .)
  ! reduce/reduce conflict for } resolved using rule 9 (instruction -> retourner .)
    IDENTIFIANT     reduce using rule 9 (instruction -> retourner .)
    RETOURNER       reduce using rule 9 (instruction -> retourner .)
    TANTQUE         reduce using rule 9 (instruction -> retourner .)
    SI              reduce using rule 9 (instruction -> retourner .)
    ECRIRE          reduce using rule 9 (instruction -> retourner .)
    ENT             reduce using rule 9 (instruction -> retourner .)
    BOOLEEN         reduce using rule 9 (instruction -> retourner .)
    $end            reduce using rule 9 (instruction -> retourner .)
    }               reduce using rule 9 (instruction -> retourner .)


state 10

    (10) instruction -> boucle .
    IDENTIFIANT     reduce using rule 10 (instruction -> boucle .)
    RETOURNER       reduce using rule 10 (instruction -> boucle .)
    TANTQUE         reduce using rule 10 (instruction -> boucle .)
    SI              reduce using rule 10 (instruction -> boucle .)
    ECRIRE          reduce using rule 10 (instruction -> boucle .)
    ENT             reduce using rule 10 (instruction -> boucle .)
    BOOLEEN         reduce using rule 10 (instruction -> boucle .)
    $end            reduce using rule 10 (instruction -> boucle .)
    }               reduce using rule 10 (instruction -> boucle .)


state 11

    (11) instruction -> condition .
    IDENTIFIANT     reduce using rule 11 (instruction -> condition .)
    RETOURNER       reduce using rule 11 (instruction -> condition .)
    TANTQUE         reduce using rule 11 (instruction -> condition .)
    SI              reduce using rule 11 (instruction -> condition .)
    ECRIRE          reduce using rule 11 (instruction -> condition .)
    ENT             reduce using rule 11 (instruction -> condition .)
    BOOLEEN         reduce using rule 11 (instruction -> condition .)
    $end            reduce using rule 11 (instruction -> condition .)
    }               reduce using rule 11 (instruction -> condition .)


state 12

    (12) instruction -> affectation .
    IDENTIFIANT     reduce using rule 12 (instruction -> affectation .)
    RETOURNER       reduce using rule 12 (instruction -> affectation .)
    TANTQUE         reduce using rule 12 (instruction -> affectation .)
    SI              reduce using rule 12 (instruction -> affectation .)
    ECRIRE          reduce using rule 12 (instruction -> affectation .)
    ENT             reduce using rule 12 (instruction -> affectation .)
    BOOLEEN         reduce using rule 12 (instruction -> affectation .)
    $end            reduce using rule 12 (instruction -> affectation .)
    }               reduce using rule 12 (instruction -> affectation .)


state 13

    (13) instruction -> declaration .
    IDENTIFIANT     reduce using rule 13 (instruction -> declaration .)
    RETOURNER       reduce using rule 13 (instruction -> declaration .)
    TANTQUE         reduce using rule 13 (instruction -> declaration .)
    SI              reduce using rule 13 (instruction -> declaration .)
    ECRIRE          reduce using rule 13 (instruction -> declaration .)
    ENT             reduce using rule 13 (instruction -> declaration .)
    BOOLEEN         reduce using rule 13 (instruction -> declaration .)
    $end            reduce using rule 13 (instruction -> declaration .)
    }               reduce using rule 13 (instruction -> declaration .)


state 14

    (14) instruction -> ecrire .
    IDENTIFIANT     reduce using rule 14 (instruction -> ecrire .)
    RETOURNER       reduce using rule 14 (instruction -> ecrire .)
    TANTQUE         reduce using rule 14 (instruction -> ecrire .)
    SI              reduce using rule 14 (instruction -> ecrire .)
    ECRIRE          reduce using rule 14 (instruction -> ecrire .)
    ENT             reduce using rule 14 (instruction -> ecrire .)
    BOOLEEN         reduce using rule 14 (instruction -> ecrire .)
    $end            reduce using rule 14 (instruction -> ecrire .)
    }               reduce using rule 14 (instruction -> ecrire .)


state 15

    (30) fonction_declaration -> type . IDENTIFIANT ( param_list ) { listeInstructions }
    (31) fonction_declaration_without_parm -> type . IDENTIFIANT ( ) { listeInstructions }
    (16) declaration -> type . IDENTIFIANT ;
    (17) declaration -> type . IDENTIFIANT = expr ;
    IDENTIFIANT     shift and go to state 24


state 16

    (28) appel_fonction_instr_without_parm -> IDENTIFIANT . ( ) ;
    (26) appel_fonction_instr -> IDENTIFIANT . ( arg_list ) ;
    (18) affectation -> IDENTIFIANT . = expr ;
    (               shift and go to state 25
    =               shift and go to state 26


state 17

    (24) retourner -> RETOURNER . expr ;
    (35) expr -> . expr ET expr
    (36) expr -> . expr DIV term
    (37) expr -> . expr COMPARATEUR expr
    (38) expr -> . expr MODULO term
    (39) expr -> . term
    (50) term -> . term MINUS factor
    (51) term -> . term PLUS factor
    (52) term -> . factor
    (53) term -> . term MULT factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    expr                           shift and go to state 27
    term                           shift and go to state 28
    factor                         shift and go to state 30
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 18

    (23) boucle -> TANTQUE . ( expr ) { listeInstructions }
    (               shift and go to state 39


state 19

    (19) condition -> SI . ( expr ) { listeInstructions } suite_sinosi
    (               shift and go to state 40


state 20

    (15) ecrire -> ECRIRE . ( expr ) ;
    (               shift and go to state 41


state 21

    (54) type -> ENT .
    IDENTIFIANT     reduce using rule 54 (type -> ENT .)


state 22

    (55) type -> BOOLEEN .
    IDENTIFIANT     reduce using rule 55 (type -> BOOLEEN .)


state 23

    (4) listeInstructions -> listeInstructions instruction .
    IDENTIFIANT     reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    RETOURNER       reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    TANTQUE         reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    SI              reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    ECRIRE          reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    ENT             reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    BOOLEEN         reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    $end            reduce using rule 4 (listeInstructions -> listeInstructions instruction .)
    }               reduce using rule 4 (listeInstructions -> listeInstructions instruction .)


state 24

    (30) fonction_declaration -> type IDENTIFIANT . ( param_list ) { listeInstructions }
    (31) fonction_declaration_without_parm -> type IDENTIFIANT . ( ) { listeInstructions }
    (16) declaration -> type IDENTIFIANT . ;
    (17) declaration -> type IDENTIFIANT . = expr ;
    (               shift and go to state 42
    ;               shift and go to state 43
    =               shift and go to state 44


state 25

    (28) appel_fonction_instr_without_parm -> IDENTIFIANT ( . ) ;
    (26) appel_fonction_instr -> IDENTIFIANT ( . arg_list ) ;
    (56) arg_list -> . arg_list , expr
    (57) arg_list -> . expr
    (35) expr -> . expr ET expr
    (36) expr -> . expr DIV term
    (37) expr -> . expr COMPARATEUR expr
    (38) expr -> . expr MODULO term
    (39) expr -> . term
    (50) term -> . term MINUS factor
    (51) term -> . term PLUS factor
    (52) term -> . factor
    (53) term -> . term MULT factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    )               shift and go to state 45
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    arg_list                       shift and go to state 46
    expr                           shift and go to state 47
    term                           shift and go to state 28
    factor                         shift and go to state 30
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 26

    (18) affectation -> IDENTIFIANT = . expr ;
    (35) expr -> . expr ET expr
    (36) expr -> . expr DIV term
    (37) expr -> . expr COMPARATEUR expr
    (38) expr -> . expr MODULO term
    (39) expr -> . term
    (50) term -> . term MINUS factor
    (51) term -> . term PLUS factor
    (52) term -> . factor
    (53) term -> . term MULT factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    expr                           shift and go to state 48
    term                           shift and go to state 28
    factor                         shift and go to state 30
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 27

    (24) retourner -> RETOURNER expr . ;
    (35) expr -> expr . ET expr
    (36) expr -> expr . DIV term
    (37) expr -> expr . COMPARATEUR expr
    (38) expr -> expr . MODULO term
    ;               shift and go to state 49
    ET              shift and go to state 50
    DIV             shift and go to state 51
    COMPARATEUR     shift and go to state 52
    MODULO          shift and go to state 53


state 28

    (39) expr -> term .
    (50) term -> term . MINUS factor
    (51) term -> term . PLUS factor
    (53) term -> term . MULT factor
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MULT resolved as shift
    ;               reduce using rule 39 (expr -> term .)
    ET              reduce using rule 39 (expr -> term .)
    DIV             reduce using rule 39 (expr -> term .)
    COMPARATEUR     reduce using rule 39 (expr -> term .)
    MODULO          reduce using rule 39 (expr -> term .)
    )               reduce using rule 39 (expr -> term .)
    ,               reduce using rule 39 (expr -> term .)
    OU              reduce using rule 39 (expr -> term .)
    MINUS           shift and go to state 54
    PLUS            shift and go to state 55
    MULT            shift and go to state 56


state 29

    (41) factor -> MINUS . factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    factor                         shift and go to state 57
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 30

    (52) term -> factor .
    (43) factor -> factor . OU expr
  ! shift/reduce conflict for OU resolved as shift
    MINUS           reduce using rule 52 (term -> factor .)
    PLUS            reduce using rule 52 (term -> factor .)
    MULT            reduce using rule 52 (term -> factor .)
    ;               reduce using rule 52 (term -> factor .)
    ET              reduce using rule 52 (term -> factor .)
    DIV             reduce using rule 52 (term -> factor .)
    COMPARATEUR     reduce using rule 52 (term -> factor .)
    MODULO          reduce using rule 52 (term -> factor .)
    )               reduce using rule 52 (term -> factor .)
    ,               reduce using rule 52 (term -> factor .)
    OU              shift and go to state 58


state 31

    (40) factor -> LIRE . ( )
    (               shift and go to state 59


state 32

    (45) factor -> ( . expr )
    (35) expr -> . expr ET expr
    (36) expr -> . expr DIV term
    (37) expr -> . expr COMPARATEUR expr
    (38) expr -> . expr MODULO term
    (39) expr -> . term
    (50) term -> . term MINUS factor
    (51) term -> . term PLUS factor
    (52) term -> . factor
    (53) term -> . term MULT factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    expr                           shift and go to state 60
    term                           shift and go to state 28
    factor                         shift and go to state 30
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 33

    (42) factor -> NON . expr
    (35) expr -> . expr ET expr
    (36) expr -> . expr DIV term
    (37) expr -> . expr COMPARATEUR expr
    (38) expr -> . expr MODULO term
    (39) expr -> . term
    (50) term -> . term MINUS factor
    (51) term -> . term PLUS factor
    (52) term -> . factor
    (53) term -> . term MULT factor
    (40) factor -> . LIRE ( )
    (41) factor -> . MINUS factor
    (42) factor -> . NON expr
    (43) factor -> . factor OU expr
    (44) factor -> . IDENTIFIANT
    (45) factor -> . ( expr )
    (46) factor -> . BOOLEEN_LITERAL
    (47) factor -> . ENTIER
    (48) factor -> . appel_fonction_expr_without_parm
    (49) factor -> . appel_fonction_expr
    (29) appel_fonction_expr_without_parm -> . IDENTIFIANT ( )
    (27) appel_fonction_expr -> . IDENTIFIANT ( arg_list )
    LIRE            shift and go to state 31
    MINUS           shift and go to state 29
    NON             shift and go to state 33
    IDENTIFIANT     shift and go to state 34
    (               shift and go to state 32
    BOOLEEN_LITERAL shift and go to state 35
    ENTIER          shift and go to state 36

    expr                           shift and go to state 61
    term                           shift and go to state 28
    factor                         shift and go to state 30
    appel_fonction_expr_without_parm shift and go to state 37
    appel_fonction_expr            shift and go to state 38

state 34

    (44) factor -> IDENTIFIANT .
    (29) appel_fonction_expr_without_parm -> IDENTIFIANT . ( )
    (27) appel_fonction_expr -> IDENTIFIANT . ( arg_list )
    OU              reduce using rule 44 (factor -> IDENTIFIANT .)
    MINUS           reduce using rule 44 (factor -> IDENTIFIANT .)
    PLUS            reduce using rule 44 (factor -> IDENTIFIANT .)
    MULT            reduce using rule 44 (factor -> IDENTIFIANT .)
    ;               reduce using rule 44 (factor -> IDENTIFIANT .)
    ET              reduce using rule 44 (factor -> IDENTIFIANT .)
    DIV             reduce using rule 44 (factor -> IDENTIFIANT .)
    COMPARATEUR     reduce using rule 44 (factor -> IDENTIFIANT .)
    MODULO          reduce using rule 44 (factor -> IDENTIFIANT .)
    )               reduce using rule 44 (factor -> IDENTIFIANT .)
    ,               reduce using rule 44 (factor -> IDENTIFIANT .)
    (               shift and go to state 62


state 35

    (46) factor -> BOOLEEN_LITERAL .
    OU              reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    MINUS           reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    PLUS            reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    MULT            reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    ;               reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    ET              reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    DIV             reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    COMPARATEUR     reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    MODULO          reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    )               reduce using rule 46 (factor -> BOOLEEN_LITERAL .)
    ,               reduce using rule 46 (factor -> BOOLEEN_LITERAL .)


state 36

    (47) factor -> ENTIER .
    OU              reduce using rule 47 (factor -> ENTIER .)
    MINUS           reduce using rule 47 (factor -> ENTIER .)
    PLUS            reduce using rule 47 (factor -> ENTIER .)
    MULT            reduce using rule 47 (factor -> ENTIER .)
    ;               reduce using rule 47 (factor -> ENTIER .)
    ET              reduce using rule 47 (factor -> ENTIER .)
    DIV             reduce using rule 47 (factor -> ENTIER .)
    COMPARATEUR     reduce using rule 47 (factor -> ENTIER .)
    MODULO          reduce using rule 47 (factor -> ENTIER .)
    )               reduce using rule 47 (factor -> ENTIER .)
    ,               reduce using rule 47 (factor -> ENTIER .)


state 37
